public/styles/style.css
.light-bg {
    background-color: #c2dfa6;
    transition: background-color .2s;
}

.dark-bg {
    background-color: #118c4e;
    transition: background-color .2s;
}

.orange-bg {
    background-color: #f68f1e;
    transition: background-color .2s;
}
button.orange-bg:hover {
    background-color: #FF8500;
}
button.orange-bg:active {
    background-color: #FF8500;
}

.grey-bg {
    background-color: #585858;
}


/*General Items*/

html,
body {
    font-family: lato;

    width: 100%;
    max-width: 1500px;
    height: 100%;
    margin: 0 auto;
}

body > .container-fluid {
    padding: 10px 40px;
    max-width: 1920px;
}

h3 {
    font-size: 20pt;
}

.fc-highlight {
    background-color: #118c4e;
    opacity: .5;
}

.no-select {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

/*General Items*/

/*NAV BAR*/
.navbar-icon img {
    width: 150px;
    height: 100%;
    padding: 10px;
}

.navbar {
    font-size: 14pt;

    color: black;
}

.navbar a,
.navbar ul {
    color: black;
}

.navbar ul.nav {
    float: right;
}
/*NAV BAR*/

/*HOME PAGE*/

#home-desc {
    font-size: 24pt;

    color: white;

    margin-top: 20%;

    text-align: center;
}

#home-jumbo button {
    font-size: 24pt;

    margin-top: 10%;

    color: white;
    border: 2px solid white;
    border-radius: 3px;

    transition: .2s background-color, .2s color;
}
#home-jumbo button:hover {
    color: #585858;
    background-color: white;
}

#home-info-section {
    position: relative;
    cursor: pointer;
}
#home-info-section #home-info-cover {
    height: 100%;
    width: 100%;
    position: absolute;
    background-color: #118c4e;
    opacity: 0;
    border-radius: 3px;
    color: white;
    text-align: center;
    font-size: 30pt;
    transition: opacity .2s;
    z-index: 10;
}
#home-info-section:hover #home-info-cover {
    opacity: .7;
}

#home-info-section .info-items {
    text-align: center;
    font-size: 20pt;
    padding: 20px 0px;
    color: #c2dfa6;
    border-radius: 5px;
    border: 3px solid #c2dfa6;
}
#home-info-section .info-items i {
    font-size: 80pt;
}
/*#home-info-section .row > div:nth-child(1) .info-items {
    background-color: #cbdfa8;
}
#home-info-section .row > div:nth-child(2) .info-items {
    background-color: #9fd1b8;
}
#home-info-section .row > div:nth-child(3) .info-items {
    background-color: #46a468;
}
#home-info-section .row > div:nth-child(4) .info-items {
    background-color: #118c4e;
}*/



/*HOME PAGE*/

/*EVENT PAGE*/

#event #event-content {
	border: 1px solid black;
	border-radius: 5px;
}

#event .event-inputs {
	padding: 10px 0px;
}

#event-calendar {
    padding: 20px 0px;
}

#event #event-preferences {
    font-size: 12pt;
}
#event #event-preferences > .row {
    margin-top: 15px;
}
/*EVENT PAGE*/

/*AVAILABILITY PAGE - BEGIN*/
#availability #availability-content {
    border: 1px solid grey;
    border-radius: 5px;
    font-size: 12pt;
}

#availability #availability-preference {
    text-align: center;
}
#availability  #btn-available, #availability  #btn-not-preferred  {
     border: 3px solid grey;
     highlight: none;
     transition: border .2s, background-color .2s;
}
#availability  #btn-available:hover, #availability #btn-available.preferenceClicked {
     border: 3px solid #118c4e;
     background-color: #118c4e;
     color: white;
}
#availability  #btn-not-preferred:hover, #availability #btn-not-preferred.preferenceClicked {
    border: 3px solid #c2dfa6;
    background-color: #c2dfa6;
}


#availability-submit {
    margin-bottom: 10px;
}

/*AVAILABILITY PAGE - END*/

/*TABLE STYLE - START*/
#availability table td.available, #review table td.available {
    background-color: #118c4e;
}
#availability table td.not_preferred, #review table td.not_preferred {
    background-color: #8cc86b;
}

#availability table, #review table {
    margin: 20px auto;
    border-collapse: collapse;
}

#availability table td, #review table td {
    /*Table cells*/
    width: 70px;
    height: 30px;
    /*background-color:#ccc;*/

    border: 1px solid black;
    vertical-align: middle;
}

#availability th, #review th {
    text-align: center;
}

#availability table td:nth-child(1), #review table td:nth-child(1) {
    font-size: 12pt;
    padding-right: 5px;
    text-align: right;
    border: none;
    background-color: white;
}
/*TABLE STYLE - END*/

/*REVIEW PAGE - START*/

#review #review-content {
    border: 1px solid black;
    border-radius: 5px;
}

/*#review #review-event-details {

}*/

#offeredTimesContainer:after, .event-details:after {
    width: 90%;
    border-bottom: 1px solid grey;
    margin: 0 auto;
    padding-bottom: 50px;
}

.timeOption { 
    margin-top: 20px;
    border: 1px solid grey;
    border-radius: 10px;
    padding: 20px;
    text-align: center;
    font-size: 13pt;
}

.timeOption:hover {
    background-color: #c2dfa6;
}

.time-hover {
}

.time-names-hover { /*element that appears on review page*/
    position: absolute;
    border: 1px solid black;
    z-index: 10;
    padding: 10px;
    border-radius: 3px;
    pointer-events: none;
}
.time-names-hover > .names-row {

}

.time-names-hover > #time-names-total {
    font-weight: bold;
}

#modal-share #share-add-holder {
    text-align: right;
}

/* REVIEW PAGE - END */

#holdingPage {
    text-align: center;
}

body#holdingPage > div {
    position: relative;

    display: inline;
}

body#holdingPage img {
    position: relative;
    top: 0;
    left: 0;

    height: 100%;
}

body#holdingPage h1 {
    position: absolute;
    z-index: 1;
    right: 0;
    left: 0;
}

